[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! This is Ajet.
-            I love any thing which is beautiful.</ br>
+            I love any thing which is beautiful.<br>
             And believe that life is like glass.
         </div>
         <script type="text/javascript" src="/ui/main.js">
