[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is Ajet.
+            Hi! This is Ajet.<br>
             I love any thing which is beautiful.<br>
             And believe that life is like glass.
         </div>
