[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is Ajet.<br>
+            <p class='a'>Hi! This is Ajet.</p><br>
             I love any thing which is beautiful.<br>
-            And believe that life is like glass.
+            <p class='b'>And believe that life is like glass.</p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
