--- a/ui/index.html
+++ b/ui/index.html
@@ -9,6 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
+            <h1>Hasura the Good programming Coach!!!!!!<br>
+            Hasura rocks!!!!!!  :-) <br></h1>
             <p class='a'>Hi! This is Ajet.</p><br>
             I love any thing which is beautiful.<br>
             <p class='b'>And believe that life is like glass.</p>
