[imad-console] Updates new 1.html

--- a/new 1.html
+++ b/new 1.html
@@ -25,9 +25,9 @@ Hence they do not appear on the screen.<-->
 
 <a href="http:\\google.com">Google<a/>
 
-<p>You know that this shit is entirely different and I don't want to kill it.</p>
+<p>You know that this sis extremely exciting.</p>
 Hence <strong>Mess it up</strong> as much as you can.<br />
-Don't <em>Care</em> about reverend shit and think of what you can do or achieve.
+Don't <em>Care</em> about anything negative and think of what you can do or achieve.
 
 <h2><a name="Ga">Good Aims</a></h2>
 <h2><a name="Gp">Good Policies</a></h2>
