[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,7 +35,7 @@ Hence they do not appear on the screen.<-->
 
 <a href="http:\\google.com">Google<a/>
 
-<p>You know that this sis extremely exciting.</p>
+<p>You know that this is extremely exciting.</p>
 Hence <strong>Mess it up</strong> as much as you can.<br />
 Don't <em>Care</em> about anything negative and think of what you can do or achieve.
 
